added filter boxes for lists

--- a/css/attached-posts-admin.css
+++ b/css/attached-posts-admin.css
@@ -28,6 +28,10 @@
 	margin-bottom: 5px;
 }
 
+.cmb-type-custom-attached-posts .search-wrap {
+	margin-bottom: 5px;
+}
+
 .cmb-type-custom-attached-posts .connected {
 	background: #F4F4F4;
 	cursor: pointer;
