Clean up thumbnail css

--- a/css/attached-posts-admin.css
+++ b/css/attached-posts-admin.css
@@ -38,13 +38,21 @@
 }
 
 .cmb-type-custom-attached-posts .has-thumbnails.connected {
-  height: 600px;
+	height: 600px;
 }
 
+.cmb-type-custom-attached-posts .has-thumbnails li {
+	clear: both;
+}
 
-.cmb-type-custom-attached-posts .connected img {
-  margin-right: 10px;
-  vertical-align: middle;
+.cmb-type-custom-attached-posts .has-thumbnails li img {
+	margin-right: 10px;
+	vertical-align: middle;
+	float: left;
+}
+
+.cmb-type-custom-attached-posts .has-thumbnails li a {
+	text-indent: 55px;
 }
 
 .attached-posts-wrap .attached {
