Add Search Filter Boxes to Lists. Merge pull request from @owenconti and closes #4

--- a/css/attached-posts-admin.css
+++ b/css/attached-posts-admin.css
@@ -28,6 +28,11 @@
 	margin-bottom: 5px;
 }
 
+.cmb-type-custom-attached-posts .search-wrap .regular-text {
+	width: 100%;
+	margin: 0 0 7px 0;
+}
+
 .cmb-type-custom-attached-posts .connected {
 	background: #F4F4F4;
 	cursor: pointer;
