First commit of attached post relationship label option - adds input box to attached posts and saves to a new metakey

--- a/css/attached-posts-admin.css
+++ b/css/attached-posts-admin.css
@@ -111,3 +111,8 @@ ul.hide-selected li.added{
 	color: #999;
 	margin: .2em -.2em 0 1px;
 }
+
+.attached-wrap .attached.connected li input{ 
+	display: block;
+	width: 60%;
+}
